@@ -3,22 +3,23 @@ Hash: SHA256
 
 DIST ckan-1.14.3.tar.gz 23028942 SHA256 23ecf0ff379fe44b4c3bdfb564610a02bdacec644f4caad65eb4feecb84a85d6 SHA512 4a9e5f23c052a87f6dbc36c782a01550873cc551555bb6730cce27fed7627bd485361d8300aa4d4291b6818bfc45af6e54389f388b3cd76e3edd077a069d817d WHIRLPOOL 5c81cfd71ea15815c59f17703ef6be750b4f2f424b29d33392c0696e6eca89bad67a610a5eb64fc8fc3b12dd7a76dc9f0592fa3f3650b01445d16780b2a63d02
 DIST ckan-1.16.1.tar.gz 23528710 SHA256 1c08929b7d67cf50a00c13077183011aab377fe22134f26564c110f6187483dd SHA512 85eb7ad1ab390b68136b2e73ef9aeac06708e44cce4128f4174561acc249867d76c678747f123ec2b5cc3af73ed39cddf7cb63e646f7eeb20f7f358b32863adf WHIRLPOOL f90b90fbc5fb3eb62b83be8f7fc84a2d5879979a4e21d7d52db65294e67c50852b2c63a234d82cb5365863db5ea17140c40c24ea80fe5d985f641b04f9caed50
+DIST ckan-1.18.0.tar.gz 23541803 SHA256 e7f6e1fd557f71942921dc34849a0b38ffa7c3fe856fd54a9efa6ad789058cb1 SHA512 71a208da7cd9d5d290eaa91d1ad2913d1d59df9f0f3a6533df6ef0472795a02fc12727ef3e2e8da8d32e3ee281a5bcfa87977fdf5eabb6af4c784ad0510928ab WHIRLPOOL e7eb12a6537f07fd470bded465d5d29094f95c3d2e28f0b7bf79ce420f858d06cc73c402c04d77539f8c5a85930fd83c2bba1547c6c1ddbaadc19bb19ef8e516
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJW6LDMXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJXcOcTXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59WrcP/1sLQPWVG6sXPi3VpwVhalm8
-LiS+d/4RSofKlfcGlswAKe3Xo6QHJUtWI1mg6maDvK99UnmrQq/KdTrRhY7K5Q33
-/5UghcwRRUnp5U1rsGBYvLYTXfpVZjsXisas3uNwAdOdd4wp9HJMQjCjiQgorXLl
-UCgA8PEMNsIRI3+ZRgmOrXVLyOaFY3kZVtRFCKiknXFd1q/nZJJRiUypNn1HMXot
-rX1sJatHSBy88SU0VvYi8P11o/2U9XPPunYvmMtwd49R6U7fTJOZC2SApdjTKtRn
-Hm3zO8l52Urb3JTNRVtIBaWb3nfuxMwGW5CE+BEGQK+m/uBYBafXSw8uEE2aCZKV
-UuIaQYszmbCM8eKPa0wGguhPbYIyY+gHEziVzepJIltsycmIjboMYMygQrgDKSvA
-2OLTXGc7fMjAywpOvaXPUILofwifj/sWPMqBbGZPDK8vSSZnf70lL81tO1Ja/98w
-MJ5ffpZKwZxgoyInBR5RVeYIt3qT2Yddj4xrEonYbsiRltj2CCqIIGeJ3+xZfMyd
-QDZOL+RHBRsfAmqKUeCdEWh8CG0U71CWb9D8OPl0sjACoQxRe4A8HL/QxFogNjvy
-eRfqXWqgIod1taH7zLAY4JsV90IRHtt8pzol+5g16e59IxOdufjB86q4WStXfxnx
-Xpaa2HO6p/q9yxH15rOj
-=3IOl
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59vfgP/Ara4tfNeK94wHjtM9tPE1/2
+SuUQvZtX4Ojkm+H878NJNb+2x87+VjlxMyfS9czewXmOk2C3WP7k/+NgLZvpkFMv
+CzuiVgtRjAgwHXVYLQNXSIAjYeUiyPK5hix3JgfWB4YDntWpzu2nTKbQqbYTPzyy
+flK5UExHZm0IDY0qfArfqQmX+oHKo0+fKtNqQmCCPxC2Bgsy71HdF1pruWd4hA+H
+2kjgEqSTTVUj4oQfoBMpjWnIxvE+3V5d6LS38mqyjdbKtbz7Ae/TkCrIZvT82H1O
+hT9oBOy6o5eu/mEmjTkbTzOOFjFbTnszXI+DgbS4WVlShpl4VnM0GlfgqfXpj7qW
+DVPGfm/VEPf/CudHqJwboduGgCcdT6ATV9tgbfA+v4MKO95m5CO1eSXq20DYOXFu
+fJCEyMquCzXesx8LsdeGXaJB3w8GS/mSPXKTBvIRyGv71xyR5OSAPXaMfUsrH1TL
+yTVy+IMKAKfYTELo2DBxYAPMGkY2MtLESSmYwEO59a0m4XtIt3WxcNo/4CwmV48D
+tSfQgCKP0V7+RQVAUMvTqb2IHdg6fHZBaIHBCcfJVjqLy3fhw6/MsqyRH0geYI2N
+BVdzTpJVYkF4qiVYaZD9ck4iF0d2HiEVQjm4ccF3xGHCz4Dxe3MJyrROCWe9zu6N
+EM1m+rtaySHKLJ+9oOcx
+=Z5gW
 -----END PGP SIGNATURE-----
