@@ -1,3 +1,9 @@
+*ckan-1.18.0 (27 Jun 2016)
+
+  27 Jun 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +ckan-1.18.0.ebuild, metadata.xml:
+  games-util/ckan: version bump
+
 *ckan-1.16.1 (16 Mar 2016)
 
   16 Mar 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
